# site-lyuda-card

./: README.md  db 2025-07-13.sqlite3  pyproject.toml  requirements.txt  setup.md
SQLite/: analysis.sql  db 2025-07-20.sqlite3  аналітика.md
inputs/: base 1.html  base 2.html  content.md
site_card/: passenger_wsgi.py  run.py
site_card/app_main/: context_processors.py  middlewares.py  models.py  urls.py  views.py
site_card/app_main/migrations/: 0001_initial.py
site_card/app_main/templates/app_main/: FAQ.html  about 1.html  about.html  home 1.html  home 2.html  home 3.html  home.html  services.html
site_card/app_main/templates/app_main/arhieve/: FAQ 1.html  home 4.html
site_card/locale/ru/LC_MESSAGES/: django.po  django1.po
site_card/locale/ru/LC_MESSAGES/archieve/: django2.po
site_card/site_card/: asgi.py  settings.py  urls.py  wsgi.py
site_card/site_card/templates/: base.html  menu.html
site_card/static/css/: style.css
